--- a/src/gui/order/PaymentScreen.fxml
+++ b/src/gui/order/PaymentScreen.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentController">
+<VBox alignment="CENTER" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentController">
    <children>
       <BorderPane prefHeight="650.0" prefWidth="1010.0">
          <center>
@@ -102,38 +103,54 @@
             </Pane>
          </center>
          <right>
-            <VBox BorderPane.alignment="CENTER">
-               <children>
-                  <HBox>
+            <ScrollPane hbarPolicy="NEVER" BorderPane.alignment="CENTER">
+               <content>
+                  <VBox prefHeight="650.0" prefWidth="259.0">
                      <children>
-                        <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Order Summary">
-                           <HBox.margin>
-                              <Insets right="20.0" />
-                           </HBox.margin>
-                        </Label>
+                        <HBox>
+                           <children>
+                              <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Order Summary">
+                                 <HBox.margin>
+                                    <Insets right="20.0" />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                           <VBox.margin>
+                              <Insets left="15.0" top="20.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <VBox fx:id="order_items">
+                           <VBox.margin>
+                              <Insets left="15.0" />
+                           </VBox.margin></VBox>
+                        <VBox fx:id="extra_fees_vbox">
+                           <VBox.margin>
+                              <Insets left="15.0" />
+                           </VBox.margin></VBox>
+                        <HBox prefHeight="100.0" prefWidth="280.0">
+                           <children>
+                              <Label prefHeight="22.0" prefWidth="120.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Total">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="40.0" top="10.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <Label fx:id="total_price_label" prefHeight="22.0" prefWidth="185.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="2.5 $">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </HBox>
                      </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <VBox fx:id="order_items" />
-                  <VBox fx:id="extra_fees_vbox" />
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Total">
-                           <HBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="50.0" top="10.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label fx:id="total_price_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="2.5 $">
-                           <HBox.margin>
-                              <Insets bottom="10.0" left="50.0" right="10.0" top="10.0" />
-                           </HBox.margin>
-                        </Label>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </VBox>
+               </content>
+            </ScrollPane>
          </right>
       </BorderPane>
    </children>
